k8s/redpanda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda
  namespace: kcc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
        - name: redpanda
          image: docker.redpanda.com/redpandadata/redpanda:v24.1.1
          args:
            - redpanda
            - start
            - --smp=1
            - --memory=512M
            - --overprovisioned
            - --kafka-addr=0.0.0.0:9092
            - --advertise-kafka-addr=redpanda.kcc.svc.cluster.local:9092
          ports:
            - containerPort: 9092
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "250m"
              memory: "768Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redpanda
  namespace: kcc
spec:
  selector:
    app: redpanda
  ports:
    - port: 9092
      targetPort: 9092
